--- a/app/templates/pitches/study.html
+++ b/app/templates/pitches/study.html
@@ -2,12 +2,12 @@
 {% import 'macros.html' as macro %}
 {%block content%}
 <div class="container">
-    <div class="card" style="width: 20rem;">
+    <div class="card" style="width: 18rem;">
         <div class="card-body ">
           <h4 class="card-title" style="font-weight:900;font-size:20px;font-family: 'Open Sans', sans-serif;">{{title}}</h4>
-          
-            {{macro.displayPitches(sports_pitch)}}
-          
+          <div class="row">
+            {{macro.displayPitches(study_pitch)}}
+          </div>
         </div>
       </div>
 </div>
